<resources>
    <string name="app_name">Yoga Schedule (Manager)</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Tranquil Studio</string>
    <string name="nav_header_subtitle">maung_naing123@tranquil.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>


    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="btn_delete">Delete</string>
    <string name="btn_update">Update</string>
    <string name="lbl_level">Level:</string>
    <string name="lbl_description">Description:</string>
    <string name="btn_edit">Edit</string>
    <string name="btn_show_more">Show More</string>
    <string name="lbl_class_poster">Class Poster</string>
    <string name="lbl_class_name">Class Name</string>
    <string name="lbl_instructor_name">Instructor Name</string>
    <string name="lbl_schedule_description">Schedule Description</string>
    <string name="lbl_start_date">Start Date:</string>
    <string name="lbl_end_date">End Date:</string>
    <string name="lbl_days_of_week">Days of Week</string>
    <string name="btn_show_date">Show Date</string>
    <string name="lbl_class_price">Class Price:</string>
    <string name="lbl_end_time">End Time:</string>
    <string name="lbl_start_time">Start Time:</string>
    <string name="lbl_show_more">Show More</string>
    <string name="lbl_profile_image">Profile Image</string>
    <string name="lbl_specialty">Specialty:</string>
    <string name="btn_specialty">Select Speciality:</string>
    <string name="lbl_biography">Biography:</string>
    <string name="btn_assign_new_class_instance">Assign New Class Instance</string>
    <string name="lbl_included_classes">Included Classes:</string>
    <string name="lbl_course_poster">Course Poster</string>
    <string name="lbl_instructor_poster">Instructor Poster</string>
    <string name="lbl_instructor_s">Instructor(s):</string>
    <string name="lbl_schedule">Schedule</string>
    <string name="lbl_class">Class</string>
    <string name="lbl_day">Day(s)</string>
    <string name="lbl_instructor">Instructor</string>
    <string name="lbl_time">Time</string>
    <string name="btn_clear">Clear</string>
    <string name="lbl_select_course">Select Course:</string>
    <string name="lbl_no_day_selected">No Day Selected</string>
    <string name="lbl_select_yoga_class">Select Yoga Class:</string>
    <string name="lbl_submit_schedule">Submit Schedule</string>
    <string name="btn_select_start_time">Select Start Time</string>
    <string name="btn_select_start_date">Select Start Date</string>
    <string name="btn_select_days">Select Days</string>
    <string name="lbl_enter_description">Enter description</string>
    <string name="btn_select_end_time">Select End Time</string>
    <string name="lbl_select_instructor">Select Instructor:</string>
    <string name="btn_select_end_date">Select End Date</string>
    <string name="lbl_class_date">Class Date</string>
    <string name="lbl_delete_class_date">Delete Class Date</string>
    <string name="btn_offline_mode">Offline Mode</string>
    <string name="btn_enable_dark_mode">Enable Dark Mode</string>
    <string name="lbl_sync_interval_minute">Sync Interval (Minute)</string>
    <string name="default_value_1">1</string>
    <string name="lbl_database_settings">Database Settings</string>
    <string name="btn_reset_database">Reset Database</string>
    <string name="btn_filter">Filter</string>
    <string name="btn_sort">Sort</string>
    <string name="lbl_search">Search</string>
    <string name="btn_add">Add</string>
    <string name="btn_submit_instructor">Submit Instructor</string>
    <string name="lbl_select_specialties">Select Specialties</string>
    <string name="btn_select_image">Select Image</string>
    <string name="lbl_enter_bio">Enter bio</string>
    <string name="lbl_bio">Bio:</string>
    <string name="btn_select_birthdate">Select Birthdate: </string>
    <string name="lbl_select_birthdate">Select Birthdate</string>
    <string name="lbl_enter_years">Enter Experience Year</string>
    <string name="lbl_enter_name">Enter name</string>
    <string name="btn_instructor_name">Enter Name</string>
    <string name="lbl_experience_years">Experience (Years):</string>
    <string name="lbl_enter_class_name">Enter Class Name</string>
    <string name="lbl_class_image">Class Image:</string>
    <string name="lbl_select_class_type">Select Class Type:</string>
    <string name="btn_submit_yoga_class">Submit Class</string>
    <string name="lbl_max_participants">Max Participants:</string>
    <string name="lbl_price">Price ($):</string>
    <string name="lbl_enter_capacity">Enter Capacity</string>
    <string name="lbl_required_skill_level">Required Skill Level:</string>
    <string name="lbl_enter_price">Enter Price</string>
    <string name="lbl_add">Add</string>
    <string name="lbl_day_to_attend">Day(s) To Attend:</string>
    <string name="lbl_about_this_yoga_class_admin_app">About this Yoga Class Admin App</string>
    <string name="lbl_about_description">This app helps manage yoga classes, instructors, and schedule effectively. Our goal is to provide a seamless experience for managing your yoga offering.</string>
    <string name="lbl_developed_by">Developed by Maung Soe</string>
    <string name="lbl_version_1_0">Version 1.0</string>
    <string name="btn_submit_course">Submit Course</string>
    <string name="lbl_price_per_class">Price Per Class($):</string>
    <string name="btn_enter_duration_weeks">Enter duration (weeks)</string>
    <string name="lbl_duration_weeks">Duration (Weeks):</string>
    <string name="lbl_course_image">Course Image:</string>
    <string name="btn_enter_capacity">Enter Capacity</string>
    <string name="btn_enter_course_name">Enter Course Name</string>
    <string name="lbl_course_name">Course Name:</string>
    <string name="lbl_duration_in_weeks">Duration (in weeks):</string>
    <string name="btn_enter_duration">Enter Duration</string>
    <string name="btn_add_course">Add New Course\n</string>
    <string name="btn_add_yoga_class">Add New Yoga Class\n</string>
    <string name="btn_add_instructor">Add New Instructor</string>
    <string name="btn_reset_search">Reset</string>
    <string name="btn_close">Close</string>
    <string name="lbl_add_class_date">Add Class Date</string>
    <string name="btn_select_class_date">Select Class Date:</string>
    <string name="btn_submit_class_date">Submit</string>
    <string name="lbl_comment">Comment</string>
    <string name="btn_enter_comment">Enter Comment (Optional)</string>
    <string name="btn_sync_database_with_cloud">Sync Database With Cloud</string>
</resources>